Fix cutoff issues on mobile

--- a/pages/moneymanagementsystem/cashFlowStyles.css
+++ b/pages/moneymanagementsystem/cashFlowStyles.css
@@ -404,6 +404,7 @@ button[type=button]:active {
     width:100%;
     height: 93vh;
     padding: 1.5rem;
+    padding-bottom: 4rem;
     overflow: visible;
     overflow-y: scroll;
     border: 4px outset #81f3c8;
